--- a/AdminIncludes/module_configuration.html
+++ b/AdminIncludes/module_configuration.html
@@ -8,7 +8,7 @@
 
     <div class="form-container">
       <div class="col-md-12">
-	    <p>{intl d='instagram.ai' l='## How to retrieve my Access Token ##'}</p>
+	    <p>{intl d='instagram.ai' l='## How to retrieve my Access Token ##' urloauth={url path="/module/Instagram/access"}}</p>
         {form name="instagram.config"}
         {if $form_error_message}<div class="alert alert-danger">{$form_error_message}</div>{/if}
 
@@ -20,17 +20,16 @@
             <div class="form-group{if $error} has-error{/if}">
               <label class="control-label" for="{$label_attr.for}">
               {$label}
-	                <span class="required">*</span>
                 {form_error form=$form field="access_token"}
                       <br />
                       <span class="error">{$message}</span>
                 {/form_error}
               </label>
               <span class="label-help-block">{$label_attr.help}</span>
-              <input id="instagram_config-id-access_token" class="form-control " type="text" required="" aria-required="true" value="{$value}" name="{$name}">
+              <input id="instagram_config-id-access_token" class="form-control " type="text" aria-required="true" value="{$value}" name="{$name}">
             </div>
             {/form_field}
-
+{*
             {form_field form=$form field='username'}
               <div class="form-group{if $error} has-error{/if}">
                 <label class="control-label" for="{$label_attr.for}">
@@ -45,7 +44,36 @@
                 <input id="instagram_config-id-username" class="form-control " type="text" required="" aria-required="true" value="{$value}" name="{$name}">
               </div>
             {/form_field}
-            
+*}
+            {form_field form=$form field='client_id'}
+              <div class="form-group{if $error} has-error{/if}">
+                <label class="control-label" for="{$label_attr.for}">
+                  {$label}
+	                  <span class="required">*</span>
+	                  {form_error form=$form field="client_id"}
+                      <br />
+                      <span class="error">{$message}</span>
+                  {/form_error}
+                </label>
+                <span class="label-help-block">{$label_attr.help}</span>
+                <input id="instagram_config-id-username" class="form-control " type="text" required="" aria-required="true" value="{$value}" name="{$name}">
+              </div>
+            {/form_field}
+            {form_field form=$form field='client_secret'}
+              <div class="form-group{if $error} has-error{/if}">
+                <label class="control-label" for="{$label_attr.for}">
+                  {$label}
+	                  <span class="required">*</span>
+	                  {form_error form=$form field="client_secret"}
+                      <br />
+                      <span class="error">{$message}</span>
+                  {/form_error}
+                </label>
+                <span class="label-help-block">{$label_attr.help}</span>
+                <input id="instagram_config-id-username" class="form-control " type="text" required="" aria-required="true" value="{$value}" name="{$name}">
+              </div>
+            {/form_field}
+            {*
             {form_field form=$form field='photos_quantity'}
               <div class="form-group{if $error} has-error{/if}">
                 <label class="control-label" for="{$label_attr.for}">
@@ -69,12 +97,17 @@
                 <span class="label-help-block">{$label_attr.help}</span>
             </div>
             {/form_field}
-
+*}
             <button type="submit" id="instagram-save" name="instagram_save" value="save" class="form-submit-button btn btn-sm btn-default" title="{intl d='instagram.ai' l='Save'}">{intl d='instagram.ai' l='Save'}</button>
           </form>
         {/form}
       </div>
-
+		{if {config key="instagram_client_id"}}
+		<a href="https://api.instagram.com/oauth/authorize?client_id={config key="instagram_client_id"}&redirect_uri={url path="/module/Instagram/access"}&scope=user_profile,user_media&response_type=code" class="btn btn-primary right pull-right float-right">Générer un nouveau token d'accès</a>
+		 {/if}
+		{loop type="instagram" name="instagram2" limit=1 debug=1 width="578" height="578" resize_mode="crop"}
+			{$RETOUR}
+		{/loop}
     </div>
 
   </div>
